--- a/oudfrontend/public/index.html
+++ b/oudfrontend/public/index.html
@@ -18,6 +18,10 @@
       crossorigin="anonymous"
     />
     <link
+      href="https://fonts.googleapis.com/css?family=Raleway&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
