--- a/oudfrontend/public/index.html
+++ b/oudfrontend/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/Oud.ico" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -25,6 +26,10 @@
       rel="stylesheet"
       href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <script
+      src="https://kit.fontawesome.com/3c994ce0e8.js"
+      crossorigin="anonymous"
+    ></script>
     <title>OUD</title>
   </head>
   <body>
