--- a/oudfrontend/public/index.html
+++ b/oudfrontend/public/index.html
@@ -17,7 +17,8 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <title>OUD</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+            <title>OUD</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
