--- a/oudfrontend/public/index.html
+++ b/oudfrontend/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Frontend of Oud which is a mimic all the functionalities of Spotify."
-    />
+    <meta name="description" content="Oud Web Music Player" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       rel="stylesheet"
